tests/rosetta/out/Java/attractive-numbers.error
javac error: exit status 1
/tmp/TestMochiToJavaattractive-numbers3807462273/001/AttractiveNumbers.java:50: error: unreachable statement
        return count;
        ^
1 error
